# GAME_OF_LIFE_OCL

./: .gitignore  CMakeLists.txt  GameOfLife.cpp  GameOfLife.h  README.md  main.cpp  utils.cpp  utils.h
kernels/: gameOfLife.cl
